--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@
                         <div id="home-filter" class="filter hide">
                             <img src="./assets/icons/arrow-up.png" alt="" class="filter__arrow" />
                             <h3 class="filter__heading">Filter</h3>
-                            <form action="" class="filter__form">
+                            <form action="" class="filter__form form">
                                 <div class="filter__row filter__content">
                                     <!-- filter item 1 -->
                                     <div class="filter__col">
-                                        <label for="" class="filter__form-label">Price</label>
+                                        <label for="" class="form__label">Price</label>
                                         <div class="filter__form-group">
                                             <div
-                                                class="filter__form-slider"
+                                                class="form__slider"
                                                 style="--min-value: 10%; --max-value: 60%"
                                             ></div>
                                         </div>
                                         <div class="filter__form-group filter__form-group--inline">
                                             <!-- form group 1 -->
                                             <div>
-                                                <label for="" class="filter__form-label filter__form-label--small">
+                                                <label for="" class="form__label--small">
                                                     Minimum
                                                 </label>
                                                 <div class="filter__form-text-input filter__form-text-input--small">
@@ -138,7 +138,7 @@
                                             </div>
                                             <!-- form group 2 -->
                                             <div>
-                                                <label for="" class="filter__form-label filter__form-label--small">
+                                                <label for="" class="form__label--small">
                                                     Minimum
                                                 </label>
                                                 <div class="filter__form-text-input filter__form-text-input--small">
@@ -158,32 +158,32 @@
 
                                     <!-- filter item 2 -->
                                     <div class="filter__col">
-                                        <label for="" class="filter__form-label">Size/Weight</label>
+                                        <label for="" class="form__label">Size/Weight</label>
                                         <div class="filter__form-group">
-                                            <div class="filter__form-select-wrap">
-                                                <div class="filter__form-select" style="--width: 158px">
+                                            <div class="form__select-wrap">
+                                                <div class="form__select" style="--width: 158px">
                                                     500g
                                                     <img
                                                         src="./assets/icons/select-arrow.svg"
                                                         alt=""
-                                                        class="filter__form-select-arrow icon"
+                                                        class="form__select-arrow icon"
                                                     />
                                                 </div>
-                                                <div class="filter__form-select">
+                                                <div class="form__select">
                                                     Gram
                                                     <img
                                                         src="./assets/icons/select-arrow.svg"
                                                         alt=""
-                                                        class="filter__form-select-arrow icon"
+                                                        class="form__select-arrow icon"
                                                     />
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="filter__form-group">
-                                            <div class="filter__form-tags">
-                                                <button class="filter__form-tag">Small</button>
-                                                <button class="filter__form-tag">Medium</button>
-                                                <button class="filter__form-tag">Large</button>
+                                            <div class="form__tags">
+                                                <button class="form__tag">Small</button>
+                                                <button class="form__tag">Medium</button>
+                                                <button class="form__tag">Large</button>
                                             </div>
                                         </div>
                                     </div>
@@ -192,7 +192,7 @@
 
                                     <!-- filter item 3 -->
                                     <div class="filter__col">
-                                        <label for="" class="filter__form-label">Brand</label>
+                                        <label for="" class="form__label">Brand</label>
                                         <div class="filter__form-group">
                                             <div class="filter__form-text-input">
                                                 <input
@@ -210,10 +210,10 @@
                                             </div>
                                         </div>
                                         <div class="filter__form-group">
-                                            <div class="filter__form-tags">
-                                                <button class="filter__form-tag">Lavazza</button>
-                                                <button class="filter__form-tag">Nescafe</button>
-                                                <button class="filter__form-tag">Starbucks</button>
+                                            <div class="form__tags">
+                                                <button class="form__tag">Lavazza</button>
+                                                <button class="form__tag">Nescafe</button>
+                                                <button class="form__tag">Starbucks</button>
                                             </div>
                                         </div>
                                     </div>
@@ -240,7 +240,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 1.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -250,9 +250,8 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Coffee Beans - Espresso Arabica and Robusta Beans</a>
+                                <a href="./product-detail.html">Coffee Beans - Espresso Arabica and Robusta Beans</a>
                             </h3>
-
                             <p class="product-card__brand">Lavazza</p>
                             <div class="product-card__row">
                                 <span class="product-card__price">$47.00</span>
@@ -265,7 +264,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 2.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -275,7 +274,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Lavazza Coffee Blends - Try the Italian Espresso</a>
+                                <a href="./product-detail.html">Lavazza Coffee Blends - Try the Italian Espresso</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -290,7 +289,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 3.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn like-btn--liked product-card__like-btn">
@@ -300,7 +299,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Lavazza - Caffè Espresso Black Tin - Ground coffee</a>
+                                <a href="./product-detail.html">Lavazza - Caffè Espresso Black Tin - Ground coffee</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -315,7 +314,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 4.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -325,7 +324,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Qualità Oro Mountain Grown - Espresso Coffee Beans</a>
+                                <a href="./product-detail.html">Qualità Oro Mountain Grown - Espresso Coffee Beans</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -340,7 +339,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 4.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -350,7 +349,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Lavazza Top Class Whole Bean Coffee Blend</a>
+                                <a href="./product-detail.html">Lavazza Top Class Whole Bean Coffee Blend</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -365,7 +364,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 3.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn like-btn--liked product-card__like-btn">
@@ -375,7 +374,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Espresso Arabica and Robusta Beans</a>
+                                <a href="./product-detail.html">Espresso Arabica and Robusta Beans</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -390,7 +389,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 2.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -400,7 +399,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Espresso Arabica and Robusta Beans</a>
+                                <a href="./product-detail.html">Espresso Arabica and Robusta Beans</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -415,7 +414,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 1.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -425,7 +424,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Lavazza Top Class Whole Bean Coffee Blend</a>
+                                <a href="./product-detail.html">Lavazza Top Class Whole Bean Coffee Blend</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -440,7 +439,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 1.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn like-btn--liked product-card__like-btn">
@@ -450,7 +449,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Espresso Arabica and Robusta Beans</a>
+                                <a href="./product-detail.html">Espresso Arabica and Robusta Beans</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -465,7 +464,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 3.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -475,7 +474,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">Lavazza Top Class Whole Bean Coffee Blend</a>
+                                <a href="./product-detail.html">Lavazza Top Class Whole Bean Coffee Blend</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -490,7 +489,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 4.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -500,7 +499,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">New Sumatra Mandeling Coffe Blend</a>
+                                <a href="./product-detail.html">New Sumatra Mandeling Coffe Blend</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
@@ -515,7 +514,7 @@
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
-                                <a href="#!">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item 1.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -525,7 +524,7 @@
                             </div>
 
                             <h3 class="product-card__title">
-                                <a href="#!">New Sumatra Mandeling Coffe Blend</a>
+                                <a href="./product-detail.html">New Sumatra Mandeling Coffe Blend</a>
                             </h3>
 
                             <p class="product-card__brand">Lavazza</p>
