--- a/reset-password-emailed.html
+++ b/reset-password-emailed.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Sign in | Grocery Mart</title>
+        <title>Reset your password | Grocery Mart</title>
 
         <!-- favicon -->
         <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
@@ -32,10 +32,11 @@
                     <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
                     <h2 class="logo__title">grocerymart</h2>
                 </a>
-                <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro--img" />
-                <p class="auth__intro--text">
-                    The best of luxury brand values, high quality products, and innovative services
-                </p>
+                <img
+                    src="./assets/img/forgot password/3275434 (1).jpg"
+                    alt=""
+                    class="auth__intro--img"
+                />
             </div>
             <!-- content -->
             <div class="auth__content">
@@ -44,12 +45,13 @@
                         <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
                         <h2 class="logo__title">grocerymart</h2>
                     </a>
-                    <h1 class="auth__heading">Hello Again!</h1>
+                    <h1 class="auth__heading">Reset your password</h1>
                     <p class="auth__desc">
-                        Welcome back to sign in. As a returning customer, you have access to your previously saved all
-                        information.
+                        Enter the email address associated with your account and we'll send you a link to reset your
+                        password
                     </p>
-                    <form action="./index-logined.html" class="form auth__form">
+                    <div class="auth__message message message--success">We have e-mailed your password reset link!</div>
+                    <form action="./index-logined.html" class="form auth__form auth__form--forgot">
                         <div class="form__group">
                             <div class="form__text-input">
                                 <input type="email" name="" id="" class="form__input" placeholder="Email" required />
@@ -58,41 +60,14 @@
                             </div>
                             <p class="form__error">Email is not in correct format</p>
                         </div>
-                        <div class="form__group">
-                            <div class="form__text-input">
-                                <input
-                                    type="password"
-                                    name=""
-                                    id=""
-                                    class="form__input"
-                                    placeholder="Password"
-                                    required
-                                    minlength="6"
-                                />
-                                <img src="./assets/icons/lock.svg" alt="" class="form__input-icon" />
-                                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
-                            </div>
-                            <p class="form__error">Mật khẩu ít nhất 6 kí t</p>
-                        </div>
-                        <div class="form__group form__group--inline">
-                            <label class="form__checkbox">
-                                <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
-                                <span class="form__checkbox-label">Set as default card</span>
-                            </label>
-                            <a href="./reset-password.html" class="auth__link form__pull-right">Forgot Password?</a>
-                        </div>
+
                         <div class="form__group auth__btn-group">
-                            <button class="btn btn--primary auth__btn form__submit-btn">Sign In</button>
-                            <button class="btn btn-outline auth__btn btn--no-margin auth__bottom">
-                                <img src="./assets/icons/google.svg" alt="" class="btn__icon icon" />
-                                Sign up with Google
-                            </button>
+                            <button class="btn btn--primary auth__btn form__submit-btn">Reset password</button>
                         </div>
                     </form>
 
                     <p class="auth__text">
-                        You have an account yet?
-                        <a href="./sign-up.html" class="auth__link auth__text-link">Sign Up</a>
+                        <a href="./sign-in.html" class="auth__link auth__text-link">Back to Sign in</a>
                     </p>
                 </div>
             </div>
