--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Grocery Mart</title>
+        <title>Sign up | Grocery Mart</title>
 
         <!-- favicon -->
         <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
@@ -26,14 +26,22 @@
     <body>
         <main class="auth">
             <!-- intro -->
+
             <div class="auth__intro">
+                <a href="./" class="logo auth__intro--logo d-none d-md-flex">
+                    <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
+                    <h1 class="logo__title">grocerymart</h1>
+                </a>
                 <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro--img" />
                 <p class="auth__intro--text">
                     The best of luxury brand values, high quality products, and innovative services
                 </p>
+                <button class="auth__intro-next d-none d-md-block js-toggle" toggle-target="#auth-content">
+                    <img src="./assets/img/auth/Frame 11.svg" alt="" />
+                </button>
             </div>
             <!-- content -->
-            <div class="auth__content">
+            <div id="auth-content" class="auth__content hide">
                 <div class="auth__content-inner">
                     <a href="./" class="logo">
                         <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
@@ -41,18 +49,30 @@
                     </a>
                     <h1 class="auth__heading">Sign Up</h1>
                     <p class="auth__desc">Let’s create your account and Shop like a pro and save money.</p>
-                    <form action="" class="form auth__form">
+                    <form action="./index-logined.html" class="form auth__form">
                         <div class="form__group">
                             <div class="form__text-input">
-                                <input type="email" name="" id="" class="form__input" placeholder="Email" />
+                                <input type="email" name="" id="" class="form__input" placeholder="Email" required />
                                 <img src="./assets/icons/message.svg" alt="" class="form__input-icon" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                             </div>
+                            <p class="form__error">Email is not in correct format</p>
                         </div>
                         <div class="form__group">
                             <div class="form__text-input">
-                                <input type="password" name="" id="" class="form__input" placeholder="Password" />
+                                <input
+                                    type="password"
+                                    name=""
+                                    id=""
+                                    class="form__input"
+                                    placeholder="Password"
+                                    required
+                                    minlength="6"
+                                />
                                 <img src="./assets/icons/lock.svg" alt="" class="form__input-icon" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                             </div>
+                            <p class="form__error">Password minimum 6 characters</p>
                         </div>
                         <div class="form__group">
                             <div class="form__text-input">
@@ -62,32 +82,38 @@
                                     id=""
                                     class="form__input"
                                     placeholder="Confirm Password"
+                                    required
+                                    minlength="6"
                                 />
                                 <img src="./assets/icons/lock.svg" alt="" class="form__input-icon" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                             </div>
+                            <p class="form__error">Password minimum 6 characters</p>
                         </div>
                         <div class="form__group form__group--inline">
-                            <label class="form">
-                                <input type="checkbox" name="" id="" class="form__checkbox-input" />
+                            <label class="form__checkbox">
+                                <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
                                 <span class="form__checkbox-label">Set as default card</span>
                             </label>
-                            <a href="#!" class="auth__link form__pull-right">Recovery Password</a>
                         </div>
                         <div class="form__group auth__btn-group">
-                            <button class="btn btn--primary auth__btn">Sign Up</button>
-                            <button class="btn btn-outline auth__btn btn--no-margin">
-                                <img src="./assets/icons/google.svg" alt="" class="btn__icon" />
-                                Sign in with Gmail
+                            <button class="btn btn--primary auth__btn form__submit-btn">Sign Up</button>
+                            <button class="btn btn-outline auth__btn btn--no-margin auth__bottom">
+                                <img src="./assets/icons/google.svg" alt="" class="btn__icon icon" />
+                                Sign in with Google
                             </button>
                         </div>
                     </form>
 
                     <p class="auth__text">
                         You have an account yet?
-                        <a href="./sign-in.html" class="auth__link">Sign In</a>
+                        <a href="./sign-in.html" class="auth__link auth__text-link">Sign In</a>
                     </p>
                 </div>
             </div>
         </main>
+        <script>
+            window.dispatchEvent(new Event("template-loaded"));
+        </script>
     </body>
 </html>
