--- a/sign-in.html
+++ b/sign-in.html
@@ -52,7 +52,15 @@
                     <form action="./index-logined.html" class="form auth__form">
                         <div class="form__group">
                             <div class="form__text-input">
-                                <input type="email" name="" id="" class="form__input" placeholder="Email" required />
+                                <input
+                                    type="email"
+                                    name=""
+                                    id=""
+                                    class="form__input"
+                                    placeholder="Email"
+                                    required
+                                    autofocus
+                                    />
                                 <img src="./assets/icons/message.svg" alt="" class="form__input-icon" />
                                 <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                             </div>
@@ -72,12 +80,12 @@
                                 <img src="./assets/icons/lock.svg" alt="" class="form__input-icon" />
                                 <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                             </div>
-                            <p class="form__error">Mật khẩu ít nhất 6 kí t</p>
+                            <p class="form__error">Mật khẩu ít nhất 6 kí tự</p>
                         </div>
                         <div class="form__group form__group--inline">
                             <label class="form__checkbox">
                                 <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
-                                <span class="form__checkbox-label">Set as default card</span>
+                                <span class="form__checkbox-label">Set as default cart</span>
                             </label>
                             <a href="./reset-password.html" class="auth__link form__pull-right">Forgot Password?</a>
                         </div>
