--- a/sign-up.html
+++ b/sign-up.html
@@ -52,7 +52,7 @@
                     <form action="./index-logined.html" class="form auth__form">
                         <div class="form__group">
                             <div class="form__text-input">
-                                <input type="email" name="" id="" class="form__input" placeholder="Email" required />
+                                <input type="email" name="" id="" class="form__input" placeholder="Email" required autofocus />
                                 <img src="./assets/icons/message.svg" alt="" class="form__input-icon" />
                                 <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                             </div>
@@ -93,7 +93,7 @@
                         <div class="form__group form__group--inline">
                             <label class="form__checkbox">
                                 <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
-                                <span class="form__checkbox-label">Set as default card</span>
+                                <span class="form__checkbox-label">Set as default cart</span>
                             </label>
                         </div>
                         <div class="form__group auth__btn-group">
