--- a/new-password.html
+++ b/new-password.html
@@ -54,6 +54,7 @@
                                     class="form__input"
                                     placeholder="New Password"
                                     required
+                                    autofocus
                                     minlength="6"
                                 />
                                 <img src="./assets/icons/lock.svg" alt="" class="form__input-icon" />
