--- a/reset-password.html
+++ b/reset-password.html
@@ -56,7 +56,7 @@
                     <form action="./reset-password-emailed.html" class="form auth__form auth__form--forgot">
                         <div class="form__group">
                             <div class="form__text-input">
-                                <input type="email" name="" id="" class="form__input" placeholder="Email" required />
+                                <input type="email" name="" id="" class="form__input" placeholder="Email" required autofocus />
                                 <img src="./assets/icons/message.svg" alt="" class="form__input-icon" />
                                 <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                             </div>
